# django-TrainApp

./: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  scheduler.py  scheduler2.py
mysite/: settings.py
trainapp/: DartSkill.py  asgi.py  functions.py  pushNotifications.py  scheduler.py  settings.py  streamTest.py  twitterFunc.py  urls.py  views.py  wsgi.py
trainapp/AlexaIntegration/: DartSkill.py
trainapp/static/: rss.txt
trainapp/templates/: index.html  rss.html  searchStation.html  stationInfo.html  test.html  tw_feed.html
