[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
xmltodict = "^0.12.0"
requests = "^2.27.1"
schedule = "^1.1.0"
APScheduler = "^3.8.1"
django-ask-sdk = "^1.0.0"
[tool.poetry.dev-dependencies]
